--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="passionate backend developer who has experince in headless apps with django framework ,graphene-django framework for graphql and django REST framework for RESTful API"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Abdelwahab Youssef|Portfolio</title>
+    <title>Abdelwahab Youssef | Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
